--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,8 +18,8 @@ layout: default
         <span class="post-meta"><span>{{ post.date | date: date_format }} </span>
         
         
-        {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
+        {%- if post.author -%}
+        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ post.author }}</span></span>
       {%- endif -%}
         
         
